# at32_balance

./: .gitignore  CMakeLists.txt  CMakePresets.json  gcc-arm-none-eabi.cmake  notes.txt  syscalls.c
inc/: app_3pwm.h  app_encoder.h  at32f403a_407_conf.h  periph_encoder.h  periph_led.h  periph_motor.h  periph_mpu.h  sys_clock.h  sys_delay.h  sys_dma.h  sys_gpio.h  sys_isr.h  sys_spi.h  sys_startup.h  sys_tick.h  sys_tmr.h  sys_usart.h
libraries/arduino_stub/: Arduino.h
libraries/simplefoc/: BLDCMotor.cpp  BLDCMotor.h  SimpleFOC.h
libraries/simplefoc/common/: foc_utils.cpp  foc_utils.h  time_utils.cpp
libraries/simplefoc/common/base_classes/: FOCDriver.h  FOCMotor.cpp  FOCMotor.h  Sensor.cpp  Sensor.h  StepperDriver.h
libraries/simplefoc/sensors/: Encoder.h
src/: app_3pwm.cpp  app_encoder.cpp  main.c  main.cpp  periph_encoder.c  periph_led.c  periph_motor.c  periph_mpu.c  sys_clock.c  sys_delay.c  sys_dma.c  sys_gpio.c  sys_isr.c  sys_spi.c  sys_startup.cpp  sys_tick.c  sys_tmr.c  sys_usart.c
